# homeassistant-mta-subway

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  hacs.json  pyproject.toml  sensor.py
.beads/: issues.jsonl  metadata.json
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: hacs_validate.yml  hassfest.yml  label-prs.yml  test.yml
custom_components/mta_subway/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  models.py  sensor.py
custom_components/mta_subway/translations/: en.json
mta_subway/: manifest.json  sensor.py
tests/: __init__.py  conftest.py  test_alerts_coordinator.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_models.py  test_sensor.py
