[project]
name = "homeassistant-mta-subway"
version = "0.3.0"
description = "Home Assistant integration for NYC MTA Subway service status"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13.2"
authors = [{ name = "iicky" }]

[dependency-groups]
dev = [
    "homeassistant>=2025.5,<2026.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
    "aioresponses>=0.7",
    "ruff>=0.7",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [".venv", "tests/__pycache__"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "ASYNC",
    "PT",
    "PIE",
    "C4",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["custom_components/mta_subway", "tests"]
exclude = ["**/__pycache__", ".venv"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
